<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareYourSpot</string>
    <string name="app_nameIcon">Share YourSpot</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="emailorusername">Email or Username</string>
    <string name="password">Password</string>
    <string name="retypepassword">Retype Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="profil">Profil</string>
    <string name="rate">Rate</string>
    <string name="comment">Comment</string>
    <string name="commentlabel">Write a comment</string>
    <string name="showMap">Show on Map</string>
    <string name="add_comment">Add Comment</string>
    <string name="add">add</string>
    <string name="spots">Spots</string>
    <string name="back">back</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="commentHint">Enter your comment</string>
    <string name="post">post</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="new_group">Manage Groups</string>
    <string name="create">Create</string>
    <string name="add_friends_group">Add Friends to Group</string>
    <string name="title_activity_rest_test">RestTest</string>
    <string name="getButtonText">Get</string>
    <string name="clearButtonText">Clear</string>
    <string name="getResultText">Get</string>
    <string name="dataLoadFailureTitle">Data loading failed</string>
    <string name="dataLoadFailureText">Data loading failed</string>
    <string name="groupCreateFailureGroupnameTitle">Can not create group</string>
    <string name="groupCreateFailureGroupnameText">Please ensure that your groupname is not empty</string>
    <string name="loginFailureTitle">Login-Issue</string>
    <string name="loginFailureText">Please check your Logindata</string>
    <string name="passwordsNotMatchingTitle">Passwords-Issue</string>
    <string name="passwordsNotMatchingText">Passwords are not matching</string>
    <string name="fillInputsTitle">Empty-Fields</string>
    <string name="fillInputsText">Please fill all inputs, so we know who you are! </string>
    <string name="title_activity_google_maps">ShareYourSpot Map</string>
    <string name="registerFailureTitle">Failure</string>
    <string name="registerFailureText">You could not be registered</string>
    <string name="registerDoneTitle">Done</string>
    <string name="registerDoneText">You have been registered</string>
    <string name="settings">Settings</string>
    <string name="title_activity_cam">Cam</string>
    <string name="camTakePicture">Cam</string>
    <string name="friend_list">Friend List</string>
    <string name="groupname">Groupname</string>
    <string name="your_groups">Your Groups</string>
    <string name="enter_text">Enter Text</string>
    <string name="title_activity_post_list">Post List</string>
    <string name="title_activity_post_Detail">Post</string>
    <string name="newPost">New Post</string>
    <string name="title_activity_new_post">NewPost</string>
    <string name="latest_posts">Latest Posts</string>
    <string name="spotter">Spotter</string>
    <string name="title_activity_post__detail">Post_Detail</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_groups">Groups</string>
    <string name="spot_text">Spot Text</string>
    <string name="title_activity_group__detail">Details</string>
    <string name="join_group">Join</string>
    <string name="description">Description</string>
    <string name="postlist">Post List</string>
    <string name="title_activity_my_groups">MyGroups</string>
    <string name="all_groups">All Groups</string>
    <string name="title_activity_android_tab_layout">ShareYourSpot</string>
    <string name="ShareFailureTitle">Failure</string>
    <string name="ShareFailureText">You must join or create a group before you can post!</string>
    <string name="leave">Leave</string>
    <string name="groupDetailTitle">Manage Membership</string>
    <string name="result">Result: </string>
    <string name="mid_value">mid_value</string>
    <string name="rating">Rating:</string>
    <string name="title_activity_add_comment">AddComment</string>
    <string name="title_activity_full_screen_image">FullScreenImage</string>

</resources>