<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_groups"
        android:icon="@drawable/group"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100"
        android:title="@string/groups"/>
    
     <item
        android:id="@+id/action_postlist"
        android:icon="@drawable/postlist"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/postlist"/>
    
    <item
        android:id="@+id/action_new_post"
        android:icon="@drawable/camera"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/newPost"/>
    
    <item
        android:id="@+id/action_newGroup"
        android:icon="@drawable/group"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/new_group"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_menu_logout"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/logout"/>
    
</menu>
