<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_post"
        android:icon="@drawable/camera"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100"
        android:title="@string/newPost"/>
    
        <item
        android:id="@+id/action_postlist"
        android:icon="@drawable/camera"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100"
        android:title="@string/postlist"/>
        
                <item
        android:id="@+id/action_newGroup"
        android:icon="@drawable/camera"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100"
        android:title="@string/new_group"/>
    
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_menu_logout"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="100"
        android:title="@string/logout"/>

</menu>

