<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShareYourSpot" >

    <Button
        android:id="@+id/btn_restTester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="restTester"
        android:text="RestTester" />

    <Button
        android:id="@+id/loginBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginPassword"
        android:layout_below="@+id/loginPassword"
        android:layout_marginTop="22dp"
        android:onClick="loginAction"
        android:text="@string/login" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/username"
        android:text="@string/username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginUsername"
        android:layout_below="@+id/loginUsername"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password" />

    <Button
        android:id="@+id/loginBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginBtnLogin"
        android:layout_alignBottom="@+id/loginBtnLogin"
        android:layout_centerHorizontal="true"
        android:onClick="registerAction"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_mapTester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_restTester"
        android:layout_alignLeft="@+id/btn_restTester"
        android:layout_alignRight="@+id/btn_restTester"
         android:onClick="mapTester"
        android:text="@string/map" />

</RelativeLayout>