<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Group_Detail" >

    <TextView
        android:id="@+id/textView_groupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:text="@string/groupname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16dip" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_groupname"
        android:layout_alignParentTop="true"
        android:text="@string/groupDetailTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_JoinGroup"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_groupname"
        android:layout_below="@+id/textView_groupname"
        android:layout_marginTop="34dp"
        android:onClick="joinGroup"
        android:text="@string/join_group" />

    <Button
        android:id="@+id/btn_LeaveGroup"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_JoinGroup"
        android:layout_alignBottom="@+id/btn_JoinGroup"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:onClick="leaveGroup"
        android:text="@string/leave" />

</RelativeLayout>