<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <EditText
        android:id="@+id/registerInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/registerInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerInputEmail"
        android:layout_below="@+id/registerInputEmail"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/registerInputPasswordFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerInputUsername"
        android:layout_below="@+id/registerInputUsername"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registerInputPasswordSecound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerInputPasswordFirst"
        android:layout_below="@+id/registerInputPasswordFirst"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/retypepassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/registerInputPasswordSecound"
        android:layout_marginRight="15dp"
        android:layout_marginTop="32dp"
        android:onClick="registerStart"
        android:text="@string/register" />

    <TextView
        android:id="@+id/regLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerInputEmail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>